k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensac
  namespace: default
  annotations:
    deploy/restart-at: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opensac
  template:
    metadata:
      labels:
        app: opensac
      annotations:
        deploy/restart-at: "1"
    spec:
      containers:
        - name: opensac
          image: ghcr.io/cola314/opensac:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /app/data
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: opensac-data
