k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensac
  namespace: default
spec:
  selector:
    app: opensac
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
