k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opensac
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - opensac.cola.io.kr
      secretName: opensac-tls
  rules:
    - host: opensac.cola.io.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opensac
                port:
                  number: 80
